--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "4.1.8",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "lucide-react": "0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "tailwind-merge": "3.3.0",
     "tailwindcss": "4.1.8"
   },
   "devDependencies": {
@@ -26,6 +30,7 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.20",
     "globals": "16.2.0",
+    "tw-animate-css": "1.3.0",
     "typescript": "5.8.3",
     "typescript-eslint": "8.33.0",
     "vite": "6.3.5"
