--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "tw-animate-css": "1.3.0",
     "typescript": "5.8.3",
     "typescript-eslint": "8.33.0",
-    "vite": "6.3.5"
+    "vite": "6.3.5",
+    "vite-tsconfig-paths": "6.0.0-beta.3"
   }
 }
