--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "5.8.3",
     "typescript-eslint": "8.33.0",
     "vite": "6.3.5",
+    "vite-plugin-checker": "0.9.3",
     "vite-tsconfig-paths": "6.0.0-beta.3"
   }
 }
