--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "@types/react-dom": "19.1.5",
     "@vitejs/plugin-react": "4.5.0",
     "eslint": "9.27.0",
+    "eslint-plugin-react-dom": "1.50.0",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.20",
+    "eslint-plugin-react-x": "1.50.0",
+    "eslint-plugin-unused-imports": "4.1.4",
     "globals": "16.2.0",
     "tw-animate-css": "1.3.0",
     "typescript": "5.8.3",
