--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-dom": "19.1.5",
     "@vitejs/plugin-react": "4.5.0",
     "eslint": "9.27.0",
+    "eslint-plugin-perfectionist": "4.13.0",
     "eslint-plugin-react-dom": "1.50.0",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.20",
