--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@eslint/js": "9.27.0",
     "@stylistic/eslint-plugin": "4.4.0",
+    "@tsconfig/recommended": "1.0.8",
     "@types/node": "22.15.24",
     "@types/react": "19.1.6",
     "@types/react-dom": "19.1.5",
