--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,4 +1,7 @@
 {
+  "extends": [
+    "@tsconfig/recommended/tsconfig.json"
+  ],
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2020",
