--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,4 +1,7 @@
 {
+  "extends": [
+    "@tsconfig/recommended/tsconfig.json"
+  ],
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "target": "ES2022",
