--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@types/react-dom": "19.1.5",
     "@vitejs/plugin-react": "4.5.0",
     "eslint": "9.27.0",
+    "eslint-import-resolver-typescript": "4.4.1",
+    "eslint-plugin-import": "2.31.0",
     "eslint-plugin-perfectionist": "4.13.0",
     "eslint-plugin-react-dom": "1.50.0",
     "eslint-plugin-react-hooks": "5.2.0",
