--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
   },
   "devDependencies": {
     "@eslint/js": "9.27.0",
-    "@stylistic/eslint-plugin": "4.4.0",
+    "@eslint/json": "0.12.0",
+    "@eslint/markdown": "6.4.0",
+    "@stylistic/eslint-plugin": "latest",
+    "@tsconfig/node-ts": "23.6.1",
     "@tsconfig/recommended": "1.0.8",
     "@types/node": "22.15.24",
     "@types/react": "19.1.6",
