--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nuqs": "2.4.3",
     "react": "19.1.0",
     "react-dom": "^19.1.0",
+    "sip.js": "0.21.2",
     "tailwind-merge": "3.3.0",
     "tailwindcss": "4.1.8"
   },
