--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@eslint/json": "0.12.0",
     "@eslint/markdown": "6.4.0",
     "@stylistic/eslint-plugin": "latest",
+    "@total-typescript/ts-reset": "0.6.1",
     "@tsconfig/node-ts": "23.6.1",
+    "@tsconfig/node22": "22.0.2",
     "@tsconfig/recommended": "1.0.8",
     "@types/node": "22.15.24",
     "@types/react": "19.1.6",
